[package]
name = "riscv_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom-span = "0.1.1"
phf = { version = "0.11.2", features = ["macros"] }
literify = "0.2.0"
anyhow = "1.0"
thiserror = "1.0"
